<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="16dp"
    android:orientation="horizontal">
    <android.support.v7.widget.AppCompatTextView
        android:layout_width="0dp"
        android:layout_height="16dp"
        android:textSize="@dimen/week_bar_title_font_size"
        android:textStyle="bold"
        android:textColor="@android:color/darker_gray"
        android:layout_weight="1"
        android:text="@string/sunday"
        android:gravity="center"
        />
    <android.support.v7.widget.AppCompatTextView
        android:layout_width="0dp"
        android:layout_height="16dp"
        android:textSize="@dimen/week_bar_title_font_size"
        android:textStyle="bold"
        android:textColor="@android:color/darker_gray"
        android:layout_weight="1"
        android:text="@string/monday"
        android:gravity="center"
        />
    <android.support.v7.widget.AppCompatTextView
        android:layout_width="0dp"
        android:layout_height="16dp"
        android:textSize="@dimen/week_bar_title_font_size"
        android:textStyle="bold"
        android:textColor="@android:color/darker_gray"
        android:layout_weight="1"
        android:text="@string/tuesday"
        android:gravity="center"
        />
    <android.support.v7.widget.AppCompatTextView
        android:layout_width="0dp"
        android:layout_height="16dp"
        android:textSize="@dimen/week_bar_title_font_size"
        android:textStyle="bold"
        android:textColor="@android:color/darker_gray"
        android:layout_weight="1"
        android:text="@string/wednesday"
        android:gravity="center"
        />
    <android.support.v7.widget.AppCompatTextView
        android:layout_width="0dp"
        android:layout_height="16dp"
        android:textSize="@dimen/week_bar_title_font_size"
        android:textStyle="bold"
        android:textColor="@android:color/darker_gray"
        android:layout_weight="1"
        android:text="@string/thursday"
        android:gravity="center"
        />
    <android.support.v7.widget.AppCompatTextView
        android:layout_width="0dp"
        android:layout_height="16dp"
        android:textSize="@dimen/week_bar_title_font_size"
        android:textStyle="bold"
        android:textColor="@android:color/darker_gray"
        android:layout_weight="1"
        android:text="@string/friday"
        android:gravity="center"
        />
    <android.support.v7.widget.AppCompatTextView
        android:layout_width="0dp"
        android:layout_height="16dp"
        android:textSize="@dimen/week_bar_title_font_size"
        android:textStyle="bold"
        android:textColor="@android:color/darker_gray"
        android:layout_weight="1"
        android:text="@string/saturday"
        android:gravity="center"
        />
</android.support.v7.widget.LinearLayoutCompat>